--- a/app/views/help/index.html.erb
+++ b/app/views/help/index.html.erb
@@ -1,5 +1,5 @@
 <h2>
-  <ion-icon name="information-circle" class="big"></ion-icon>
+  <ion-icon role="presentation" name="information-circle" class="big"></ion-icon>
   Help!
 </h2>
 
@@ -25,7 +25,7 @@
     <p>
       Now that you have an account, you should make a
       <strong>
-        <ion-icon name="document"></ion-icon>
+        <ion-icon role="presentation" name="document"></ion-icon>
         Link.
       </strong>
       The core "thing" in Walltaker is links. They are the sharable page that you can post on social media
@@ -55,7 +55,7 @@
 
         <div class="accordion" data-controller="accordion">
           <button class="accordion__trigger" data-action="click->accordion#toggle" aria-controls="options-explanation">
-            <ion-icon name="expand"></ion-icon>
+            <ion-icon role="presentation" name="expand"></ion-icon>
             Toggle options explanation
           </button>
           <div class="accordion__content" data-accordion-target="content" id="options-explanation" aria-label="Explanation of options shown in Link Form">
@@ -76,11 +76,11 @@
             </p>
             <blockquote>
               <strong>
-                <ion-icon name="checkbox-outline"></ion-icon>
+                <ion-icon role="presentation" name="checkbox-outline"></ion-icon>
                 When checked,</strong>
               this link will never expire, and the #1 Expires option will be ignored.<br/>
               <strong>
-                <ion-icon name="square-outline"></ion-icon>
+                <ion-icon role="presentation" name="square-outline"></ion-icon>
                 When unchecked,</strong>
               this link will expire at the date indicated by the #1 Expires option.
             </blockquote>
@@ -91,11 +91,11 @@
             </p>
             <blockquote>
               <strong>
-                <ion-icon name="checkbox-outline"></ion-icon>
+                <ion-icon role="presentation" name="checkbox-outline"></ion-icon>
                 When checked,</strong>
               ONLY people you have accepted friend requests with will be able to see and set your wallpaper.<br/>
               <strong>
-                <ion-icon name="square-outline"></ion-icon>
+                <ion-icon role="presentation" name="square-outline"></ion-icon>
                 When unchecked,</strong>
               ANYONE (including anon users) will be able to see and set your wallpaper.
             </blockquote>
@@ -137,13 +137,13 @@
             </p>
             <blockquote>
               <strong>
-                <ion-icon name="checkmark-outline"></ion-icon>
+                <ion-icon role="presentation" name="checkmark-outline"></ion-icon>
                 loimu_(character)</strong> all posts will feature Loimu 🦌. Any other characters are blocked.<br/>
               <strong>
-                <ion-icon name="hand-left-outline"></ion-icon>
+                <ion-icon role="presentation" name="hand-left-outline"></ion-icon>
                 pokeemon</strong> a missspelled tag! No one will be able to submit anything.<br/>
               <strong>
-                <ion-icon name="hand-left-outline"></ion-icon>
+                <ion-icon role="presentation" name="hand-left-outline"></ion-icon>
                 tits</strong> an alias tag! While this works in e621 search, the real tag is "breasts", so this is the
               same
               as misspelling a tag.
@@ -231,7 +231,7 @@
 
         <div class="accordion" data-controller="accordion">
           <button class="accordion__trigger" data-action="click->accordion#toggle" aria-controls="toml-explanation">
-            <ion-icon name="expand"></ion-icon>
+            <ion-icon role="presentation" name="expand"></ion-icon>
             But my client wants a .toml file?
           </button>
           <div class="accordion__content" data-accordion-target="content" id="toml-explanation" aria-label="Explanation of TOML files">
@@ -241,7 +241,7 @@
               configuration file called <code>walltaker.toml</code>. If you're using a client that prefers you use a
               .toml file, click the
               <strong>
-                <ion-icon name="document-outline"></ion-icon>
+                <ion-icon role="presentation" name="document-outline"></ion-icon>
                 walltaker.toml
               </strong>
               link inside of this box to download a pre-made one for your link.
@@ -282,7 +282,7 @@
 
         <div class="accordion" data-controller="accordion">
           <button class="accordion__trigger" data-action="click->accordion#toggle" aria-controls="offline-explanation">
-            <ion-icon name="expand"></ion-icon>
+            <ion-icon role="presentation" name="expand"></ion-icon>
             My link doesn't say online!
           </button>
           <div class="accordion__content" data-accordion-target="content" id="offline-explanation" aria-label="Explanation of offline or new links">
@@ -341,7 +341,7 @@
   </p>
   <ul>
     <li><strong>Add people you trust as friends,</strong> this allows you to use
-      <ion-icon name="document-lock"></ion-icon>
+      <ion-icon role="presentation" name="document-lock"></ion-icon>
       friends-only links, which stops anon spam. This is by far the most effective route.
     </li>
     <li><strong>Use a theme tag.</strong> A theme tag allows you to force a tag to be present on wallpapers people pick
