--- a/app/views/leaderboard/index.html.erb
+++ b/app/views/leaderboard/index.html.erb
@@ -1,6 +1,6 @@
 <%= turbo_frame_tag 'leaderboard' do %>
   <h2 class="one-line">
-    <ion-icon name="flame" class="big"></ion-icon>
+    <ion-icon role="presentation" name="flame" class="big"></ion-icon>
     Leaderboard
 
     <small>The top 10 users who have set the most number of wallpapers for others.</small>
