--- a/app/views/links/_submit.html.erb
+++ b/app/views/links/_submit.html.erb
@@ -20,7 +20,7 @@
 
   <% unless (@link.theme.nil? || @link.theme.empty?) %>
     <p class="subdued center">
-      The theme tag <strong><ion-icon name="pricetag-outline"></ion-icon> <%= @link.theme %></strong> must be present on post.
+      The theme tag <strong><ion-icon role="presentation" name="pricetag-outline"></ion-icon> <%= @link.theme %></strong> must be present on post.
     </p>
   <% end %>
 
