--- a/app/views/links/browse.html.erb
+++ b/app/views/links/browse.html.erb
@@ -7,7 +7,7 @@
 </div>
 
 <h2>
-  <ion-icon name="documents" class="big"></ion-icon> Browse Links
+  <ion-icon role="presentation" name="documents" class="big"></ion-icon> Browse Links
   <small>All public online links ordered by who needs the most attention at the top.</small>
 </h2>
 
