--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -9,7 +9,7 @@
   </div>
 </div>
 
-<h2><ion-icon name="document" class="big"></ion-icon> Your Links</h2>
+<h2><ion-icon role="presentation" name="document" class="big"></ion-icon> Your Links</h2>
 
 <div id="links">
   <% @links.each do |link| %>
