--- a/app/views/past_links/index.html.erb
+++ b/app/views/past_links/index.html.erb
@@ -14,10 +14,10 @@
 <% @past_links_by_user.each do |past_links_and_setter| %>
   <h2>
     <% if past_links_and_setter[:set_by].nil? %>
-      <ion-icon name="glasses" class="big"></ion-icon>
+      <ion-icon role="presentation" name="glasses" class="big"></ion-icon>
       Anon Users
     <% elsif %>
-      <ion-icon name="person" class="big"></ion-icon>
+      <ion-icon role="presentation" name="person" class="big"></ion-icon>
       <%= link_to past_links_and_setter[:set_by].username, user_path(past_links_and_setter[:set_by].username) %>
     <% end %>
     <small>Set <%= pluralize past_links_and_setter[:past_links].length, 'wallpaper' %></small>
