--- a/app/views/session/new.html.erb
+++ b/app/views/session/new.html.erb
@@ -1,6 +1,6 @@
 <% content_for(:html_title) { "Login to Walltaker" } %>
 
-<h2><ion-icon name="person"></ion-icon> Log In</h2>
+<h2><ion-icon role="presentation" name="person"></ion-icon> Log In</h2>
 
 <% if @error %>
   <div class="error_messages">
