--- a/app/views/users/_details.html.erb
+++ b/app/views/users/_details.html.erb
@@ -3,7 +3,7 @@
     <div class="task-tools small">
       <div class="right">
         <a href="<%= user_path(user.username) %>/edit" title="Edit my details" class="no-underline">
-          <ion-icon name="build"></ion-icon>
+          <ion-icon role="presentation" name="build"></ion-icon>
           Edit
         </a>
       </div>
