--- a/app/views/friendships/_friendship.html.erb
+++ b/app/views/friendships/_friendship.html.erb
@@ -10,11 +10,11 @@
     <p>Are you sure you want to unfriend <strong><%= other_user.username %></strong>?</p>
     <div class="modal__buttons">
       <%= button_tag class: 'no-underline primary', data: { 'friendship-target': 'cancel', action: 'click->friendship#cancel' } do %>
-        <ion-icon name="close"></ion-icon>
+        <ion-icon role="presentation" name="close"></ion-icon>
         Cancel
       <% end %>
       <%= button_to friendship, method: :delete, class: 'no-underline secondary', data: { action: 'click->friendship#confirm' } do %>
-        <ion-icon name="heart-dislike"></ion-icon>
+        <ion-icon role="presentation" name="heart-dislike"></ion-icon>
         Confirm
       <% end %>
     </div>
@@ -22,7 +22,7 @@
 
   <!-- markup -->
   <div class="friendship__names">
-    <ion-icon name="heart"></ion-icon>
+    <ion-icon role="presentation" name="heart"></ion-icon>
     <%= link_to other_user.username, user_path(other_user.username), data: { controller: "user-reference" } %>
     since
     <%= friendship.updated_at.strftime('%d/%m/%Y') %>
@@ -30,17 +30,17 @@
   <div class="friendship__actions">
     <% if action_name == 'index' %>
       <%= button_tag class: 'no-underline secondary', data: { action: 'click->friendship#confirm' } do %>
-        <ion-icon name="heart-dislike"></ion-icon>
+        <ion-icon role="presentation" name="heart-dislike"></ion-icon>
         Unfriend
       <% end %>
     <% end %>
     <% if action_name == 'requests' %>
       <%= button_to "#{url_for(friendship)}/accept", method: :put, class: 'no-underline' do %>
-        <ion-icon name="heart"></ion-icon>
+        <ion-icon role="presentation" name="heart"></ion-icon>
         Accept
       <% end %>
       <%= button_to friendship, method: :delete, class: 'no-underline secondary' do %>
-        <ion-icon name="heart-dislike"></ion-icon>
+        <ion-icon role="presentation" name="heart-dislike"></ion-icon>
         Ignore
       <% end %>
     <% end %>
