--- a/app/views/links/edit.html.erb
+++ b/app/views/links/edit.html.erb
@@ -6,6 +6,6 @@
   </div>
 </div>
 
-<h2><ion-icon name="build"></ion-icon> Editing link</h2>
+<h2><ion-icon role="presentation" name="build"></ion-icon> Editing link</h2>
 
 <%= render "form", link: @link %>
