--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,7 +9,7 @@
   <% if (!current_user || !@has_friendship) && (!@is_current_user || !current_user) %>
     <div class="right">
       <a href="<%= url_for :action => :new, :controller => :friendships, :params => { :with => @user.username } %>" title="Become friends" class="no-underline">
-        <ion-icon name="person-add"></ion-icon>
+        <ion-icon role="presentation" name="person-add"></ion-icon>
         Send Friend Request
       </a>
     </div>
@@ -22,7 +22,7 @@
 </div>
 
 <h2 class="one-line <%= @total_orgasms_by_day.present? ? 'with-chart' : '' %>">
-  <ion-icon name="person" class="big"></ion-icon>
+  <ion-icon role="presentation" name="person" class="big"></ion-icon>
   <span data-controller="user-reference" data-user-reference-hide-online-value><%= @user.username %></span>
   <% if @any_links_online %>
     <strong class="online" title="User is online"></strong>
@@ -60,7 +60,7 @@
 <% unless @past_links.empty? %>
   <%= link_to past_links_path, class: 'small see-all-past-wallpapers' do %>
     See all past wallpapers
-    <ion-icon name="arrow-forward"></ion-icon>
+    <ion-icon role="presentation" name="arrow-forward"></ion-icon>
   <% end %>
 <% end %>
 
@@ -70,12 +70,12 @@
     <%= turbo_frame_tag 'orgasm_form', src: '/nut/orgasms/new' %>
     <%= turbo_frame_tag 'api_key_form', class: "accent-block" do %>
       <div class="accent-block__charm">
-        <ion-icon name="eye-off"></ion-icon>
+        <ion-icon role="presentation" name="eye-off"></ion-icon>
         Only you see this
       </div>
 
       <h2>
-        <ion-icon name="key" class="big"></ion-icon>
+        <ion-icon role="presentation" name="key" class="big"></ion-icon>
         Your API key
       </h2>
 
@@ -89,7 +89,7 @@
       <div class="api-key" data-controller="api-key-form">
         <% if @user.api_key.present? %>
           <div class="api-key__key" data-api-key-form-target="key">
-            <ion-icon name="key" class="big"></ion-icon><%= @user.api_key %></div>
+            <ion-icon role="presentation" name="key" class="big"></ion-icon><%= @user.api_key %></div>
           <%= button_to user_new_api_key_path(current_user.username), class: 'danger-button' do %>
             Give me a new one
           <% end %>
@@ -114,7 +114,7 @@
   <p>
     You should pester them into making some! Click the
     <strong>
-      <ion-icon name="person-add"></ion-icon>
+      <ion-icon role="presentation" name="person-add"></ion-icon>
       Send Friends Request
     </strong> button in the tool bar to send them a friend request. Maybe that's the motivation they
     need!
