--- a/nuttracker/app/views/nuttracker/orgasms/_form.html.erb
+++ b/nuttracker/app/views/nuttracker/orgasms/_form.html.erb
@@ -1,12 +1,12 @@
 <%= turbo_frame_tag 'orgasm_form' do %>
   <div class="accent-block">
     <div class="accent-block__charm">
-      <ion-icon name="eye-off"></ion-icon>
+      <ion-icon role="presentation" name="eye-off"></ion-icon>
       Only you see this
     </div>
     <%= form_with(model: orgasm, class: 'orgasms') do |form| %>
       <h2>
-        <ion-icon name="ice-cream" class="big"></ion-icon>
+        <ion-icon role="presentation" name="ice-cream" class="big"></ion-icon>
         Orgasm
       </h2>
 
@@ -56,7 +56,7 @@
         </div>
       </div>
       <%= form.label :is_ruined, class: 'form__row' do %>
-        <ion-icon name="water"></ion-icon>
+        <ion-icon role="presentation" name="water"></ion-icon>
         Was Ruined
         <%= form.check_box :is_ruined %>
       <% end %>
