--- a/app/views/porn_search/index.html.erb
+++ b/app/views/porn_search/index.html.erb
@@ -1,6 +1,6 @@
 <%= turbo_frame_tag "pornsearch" do %>
 
-  <%= form_with url: porn_search_search_url, method: :get, data: { turbo_frame: 'pornsearch_results' } do |form| %>
+  <%= form_with url: porn_search_search_url, method: :get, data: { turbo_frame: 'pornsearch_results', 'porn-search-target': 'search' } do |form| %>
     <%= form.text_field :tags, placeholder: 'E621 Tags' %>
     <%= form.hidden_field :link, value: params['link'] %>
     <%= form.button type: :submit do %>
