Added a test button to link page

--- a/public/base.css
+++ b/public/base.css
@@ -3,6 +3,13 @@
     --success: #30AA65;
 }
 
+button.secondary,
+input[type=submit].secondary {
+    background: var(--bg);
+    color: var(--text);
+    border: 1px solid var(--border);
+}
+
 form .field.checkbox {
     display: flex;
     align-items: center;
