--- a/app/views/links/_link.html.erb
+++ b/app/views/links/_link.html.erb
@@ -50,7 +50,7 @@
         </strong>
         <span>
           <%= link.theme %>
-          <%= 'score:>' + link.min_score.to_s if link.min_score > 0 %>
+          <%= 'score:>' + link.min_score.to_s if link.min_score.present? && link.min_score > 0 %>
         </span>
       </div>
     <% end %>
