--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
   <title><%= content_for?(:html_title) ? yield(:html_title) : "Walltaker" %></title>
   <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1">
   <meta name="rating" content="adult"/>
-  <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
+  <link rel="stylesheet" href="/simple.min.css">
   <link rel="stylesheet" href="/base.css?x={{--buildnumber--}}"/>
   <link rel="stylesheet" href="/link.css?x={{--buildnumber--}}"/>
   <link rel="stylesheet" href="/dashboard.css?x={{--buildnumber--}}"/>
