Basic styles for member editor

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="/link.css?x={{--buildnumber--}}"/>
   <link rel="stylesheet" href="/dashboard.css?x={{--buildnumber--}}"/>
   <link rel="stylesheet" href="/user-profile.css?x={{--buildnumber--}}"/>
+  <link rel="stylesheet" href="/member-editor.css?x={{--buildnumber--}}"/>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/themes/dark.css">
   <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
