--- a/app/views/message_thread/edit.html.erb
+++ b/app/views/message_thread/edit.html.erb
@@ -51,3 +51,11 @@
     </ul>
   </div>
 </div>
+
+<div class="accent-block">
+  <div class="accent-block__charm">
+    <ion-icon role="presentation" name="information-circle"></ion-icon>
+    Good to know
+  </div>
+  Only your friends will appear in the "Not Members" space. <strong>You need to become friends with someone before you can add them to a thread.</strong> Anyone already in the thread can add their own friends, regardless if other members are friends with them or not.
+</div>
