--- a/app/views/message_thread/show.html.erb
+++ b/app/views/message_thread/show.html.erb
@@ -1,6 +1,6 @@
 <div class="task-tools">
   <div class="left">
-  <%= link_to "All threads", message_thread_index_path %>
+    <%= link_to "All threads", message_thread_index_path %>
   </div>
   <div class="right">
     <a href="<%= edit_message_thread_path @message_thread %>" title="Manage Members" class="no-underline">
@@ -23,6 +23,8 @@
 <%= turbo_frame_tag 'new_message_form' do %>
   <%= form_with(model: @new_message, url: send_to_message_thread_path(@message_thread)) do |form| %>
     <%= form.text_field :content, autocomplete: 'off' %>
-    <%= form.submit 'Send' %>
+    <%= form.button type: :submit do %>
+      <ion-icon name="send"></ion-icon>
+    <% end %>
   <% end %>
 <% end %>
