--- a/app/views/message_thread/_messages_from_thread.html.erb
+++ b/app/views/message_thread/_messages_from_thread.html.erb
@@ -1,6 +1,16 @@
-<% message_thread.messages.all.each do |message| %>
-  <div class="message">
-    <strong><%= message.from_user.username %></strong>
-    <%= message.content %>
-  </div>
-<% end %>
+<% messages = message_thread.messages.all.reverse %>
+
+<div class="messages">
+  <% messages.each_with_index do |message, index| %>
+    <div class="messages__message__container" data-controller="message" data-message-from-value="<%= message.from_user.username %>">
+      <div class="messages__message">
+        <p><%= message.content %></p>
+
+        <% next_message = messages[index - 1] %> <!-- Remember, the list is reversed -->
+        <% if (next_message && next_message.from_user.username != message.from_user.username) || index == 0 %>
+          <strong><%= message.from_user.username %></strong>
+        <% end %>
+      </div>
+    </div>
+  <% end %>
+</div>
