REALLY simple index page for threads

--- a/app/views/message_thread/edit.html.erb
+++ b/app/views/message_thread/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="task-tools">
   <div class="left">
-    <%= link_to "Back", message_thread_path(@message_thread) %>
+    <%= link_to "Back to thread", message_thread_path(@message_thread) %>
   </div>
 </div>
 
