--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,6 +46,9 @@
         <%= link_to 'Friends', friendships_path, class: has_requests? ? 'pinged' : '' %>
         <%= link_to 'Logout', logout_path %>
 
+        <%= link_to message_thread_index_path do %>
+          <ion-icon name="chatbubbles" class="dont-hide"></ion-icon>
+        <% end %>
         <%= turbo_stream_from "header_notifications_#{current_user.id}" %>
         <%= render partial: 'notifications' %>
       <% else %>
@@ -81,7 +84,8 @@
     © joi.how 2022 / Build #{{--buildnumber--}} by {{--buildagent--}}
     <% if current_user && current_user.admin %>
       <%= link_to blazer_path do %>
-        <ion-icon role="presentation" name="stats-chart"></ion-icon> Stats
+        <ion-icon role="presentation" name="stats-chart"></ion-icon>
+        Stats
       <% end %>
     <% end %>
   </small>
